[tool.poetry]
name = "healthcare_signups"
version = "0.1.0"
description = "healthcare registrations for patients and staff"
authors = ["codecakes <akulmat@protonmail.com>"]
license = "GNU General Public License v3.0"
include = ["registrations"]

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = {version = "~=0.71.0", extras = ["all"]}
hypercorn = "0.12.0"
gunicorn = "20.1.0"
beanie = "^1.9.1"
motor = "2.5.1"
ujson = "<5.0.0"
uvloop = "~=0.16.0"
pymongo = "~=3.12.1"
pydantic = "~=1.9.0"
Cython = "^0.29.27"
psycopg = {version = "~=3.0.4", extras = ["binary"]}
psycopg2-binary = "2.9.2"
databases = {version = "~=0.5.3", extras = ["postgresql"]}
orm = {version = "~=0.3.0", extras = ["postgresql"]}
SQLAlchemy = "~=1.4.27"
phonenumbers = "~=8.12.50"
email-validator = "~=1.2.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = {extras = ["d", "click==8.0.2"], version = ">=22.1.0"}
pre-commit = "^2.17.0"
pylint = "^2.12.2"
anyio = "3.3.4"
pytest-asyncio = "0.16.0"
pysqlite3 = "^0.4.6"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: fast executing tests. use this marker if unsure."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
