[tool.poetry]
name = "healthcare_signups"
version = "0.1.0"
description = "healthcare registrations for patients and staff"
authors = ["codecakes <akulmat@protonmail.com>"]
license = "GNU General Public License v3.0"
include = ["registrations"]

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = {version = "~=0.71.0", extras = ["all"]}
hypercorn = "0.13.2"
gunicorn = "20.1.0"
beanie = "^1.9.1"
motor = "2.5.1"
ujson = "<5.3.0"
uvloop = "~=0.16.0"
pymongo = "~=3.12.1"
pydantic = "~=1.9.1"
Cython = "^0.29.27"
psycopg = {version = "~=3.0.4", extras = ["binary"]}
psycopg2-binary = "2.9.3"
databases = {version = "~=0.5.3", extras = ["postgresql"]}
orm = {version = "~=0.3.0", extras = ["postgresql"]}
SQLAlchemy = "~=1.4.27"
phonenumbers = "~=8.12.50"
email-validator = "~=1.2.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
black = {extras = ["d", "click==8.0.2"], version = ">=22.1.0"}
pre-commit = "^2.17.0"
pylint = "^2.14.4"
anyio = "~3.6.1"
pytest-asyncio = "0.18.3"
pysqlite3 = "^0.4.6"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "fast: fast executing tests. use this marker if unsure."
]
# Removes warning
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# See: https://github.com/python/mypy/issues/5205
# mypy global options:
[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]

# See: https://pydantic-docs.helpmanual.io/mypy_plugin/
# mypy per-module options:
[tool.pydantic-mypy]
init_typed = true
